# axon

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: audio_ops.rs  detection_ops.rs  image_ops.rs  tensor_ops.rs
crates/axon-plugin/: Cargo.toml
crates/axon-plugin/src/: lib.rs
examples/: bert-embedding.toml  sherpa-transcription.toml  sherpa-tts.toml  sherpa-vad-asr.toml  whisper-full-transcription.toml  whisper-transcription-int8.toml  whisper-transcription.toml  yolov8-detection-coreml.toml  yolov8-detection.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_detection.rs  fuzz_error_classifier.rs  fuzz_image.rs  fuzz_tensor.rs
proto/: axon_infer.proto
src/: audit.rs  batch.rs  blob.rs  canary.rs  coalesce.rs  context.rs  deadline.rs  error.rs  grpc.rs  guard.rs  healthcheck.rs  kernel.rs  lib.rs  manifest.rs  otel.rs  pipeline.rs  pool.rs  serve.rs  shadow.rs
src/kernels/: audio.rs  compose.rs  detection.rs  generate.rs  image.rs  mel.rs  mod.rs  onnx.rs  sherpa.rs  sink.rs  tensor.rs  text.rs  tokenizer.rs  wasm.rs
tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
