[package]
name = "axon-ml"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Pure Rust ML inference runtime: ONNX + native ops + WASM sandbox + blob pipeline + HTTP/gRPC serving"
repository = "https://github.com/YubinghanBai/axon"
homepage = "https://github.com/YubinghanBai/axon"
readme = "README.md"
keywords = ["machine-learning", "inference", "onnx", "pipeline", "serving"]
categories = ["science", "multimedia", "web-programming::http-server"]
authors = ["YubinghanBai"]
rust-version = "1.85"

# Crate name on crates.io is `axon-ml`, but `use axon::Pipeline` in code.
[lib]
name = "axon"

[[bin]]
name = "axon"
required-features = ["cli"]

# ── Features ──────────────────────────────────────────────

[features]
default = []
cli = ["dep:clap", "dep:tracing-subscriber", "dep:reqwest"]
serve = ["cli", "dep:axum", "dep:tokio", "dep:futures", "dep:multer", "dep:http-body-util", "dep:async-stream"]
onnx = ["dep:ort", "dep:ndarray", "dep:half"]
vision = ["dep:image", "dep:ndarray", "dep:fast_image_resize"]
wasm = ["dep:wasmtime", "dep:anyhow"]
tokenizer = ["dep:tokenizers"]
audio = ["dep:symphonia", "dep:rubato", "dep:rustfft", "dep:num-complex"]

# Text processing (regex)
text = ["dep:regex"]
# Sherpa speech engine (ASR, VAD, TTS)
sherpa = ["dep:sherpa-onnx"]
# Vector DB sinks (Zero-ETL)
sink = ["dep:reqwest"]
# gRPC inference protocol (tonic)
grpc = ["serve", "dep:tonic", "dep:prost", "dep:tokio-stream", "dep:tonic-build"]
# Observability (optional)
otel = ["serve", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

# GPU Execution Providers (pass through to ort)
coreml = ["onnx", "ort/coreml"]
cuda = ["onnx", "ort/cuda"]
tensorrt = ["onnx", "ort/tensorrt"]
directml = ["onnx", "ort/directml"]

# ── Dependencies ──────────────────────────────────────────

[dependencies]
# ── Core ──
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
parking_lot = "0.12"

# ── Blob store ──
blake3 = "1"
moka = { version = "0.12", features = ["sync"] }

# ── Encoding ──
base64 = "0.22"

# ── CLI (optional) ──
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], optional = true }

# ── Serve (optional) ──
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
multer = { version = "3", optional = true }
http-body-util = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }

# ── gRPC (optional) ──
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }

# ── Observability (optional) ──
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# ── ONNX Runtime (optional) ──
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
half = { version = "2.4", optional = true }

# ── Image processing (optional) ──
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"], optional = true }
fast_image_resize = { version = "6", features = ["image"], optional = true }

# ── WASM Runtime (optional) ──
wasmtime = { version = "29", optional = true }
anyhow = { version = "1.0", optional = true }

# ── Tokenizer (optional) ──
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }

# ── Text processing (optional) ──
regex = { version = "1", optional = true }

# ── Sherpa speech engine (optional) ──
sherpa-onnx = { version = "0.1", optional = true }

# ── Audio (optional) ──
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "aac"], optional = true }
rubato = { version = "0.15", optional = true }
rustfft = { version = "6.2", optional = true }
num-complex = { version = "0.4", optional = true }

# ── Build ─────────────────────────────────────────────────

[build-dependencies]
tonic-build = { version = "0.12", optional = true, features = ["prost"] }

# ── Dev ───────────────────────────────────────────────────

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# ── Benches ───────────────────────────────────────────────

[[bench]]
name = "tensor_ops"
harness = false

[[bench]]
name = "image_ops"
harness = false

[[bench]]
name = "detection_ops"
harness = false

[[bench]]
name = "audio_ops"
harness = false
