[package]
name = "axon-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
serde_json = "1"

[dependencies.axon]
path = ".."
features = ["onnx", "vision"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_tensor"
path = "fuzz_targets/fuzz_tensor.rs"
doc = false

[[bin]]
name = "fuzz_detection"
path = "fuzz_targets/fuzz_detection.rs"
doc = false

[[bin]]
name = "fuzz_image"
path = "fuzz_targets/fuzz_image.rs"
doc = false

[[bin]]
name = "fuzz_error_classifier"
path = "fuzz_targets/fuzz_error_classifier.rs"
doc = false
